--- a/gb/23/10/4/n14087612.md
+++ b/gb/23/10/4/n14087612.md
@@ -1,49 +1,45 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>光大信托违约 以国资流失为由拒付信托收益</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13911361-c64b04097510a953d03d7a833081eb61-600x400.jpg" />
-<h6>近期，中国房地产业务成为中国信托公司踩雷的“高发地”。中融信托旗下多个信托产品接连“爆雷”，并波及至其它信托公司。图为中共央行。（Liu Jin/AFP/Getty Images）
-</h6>
+<h6>近期，中国房地产业务成为中国信托公司踩雷的“高发地”。中融信托旗下多个信托产品接连“爆雷”，并波及至其它信托公司。图为中共央行。（Liu Jin/AFP/Getty Images）</h6>
 <hr>
-	<p>【大纪元2023年10月04日讯】（大纪元记者李冰综合报导）继<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E8%9E%8D%E4%BF%A1%E6%89%98.md#1">中融信托</a>旗下产品接连“爆雷”后，又一央级信托公司出现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md#1">违约</a>。</p>
-<p>近日，兰州法院披露了一则案例：一名上市公司扬电科技实控人的委托人，在2020年购买了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%89%E5%A4%A7%E4%BF%A1%E6%89%98.md#1">光大信托</a>一款家族信托产品，本金7900万元，其中一部分资金用于受让光大信托战略配售中芯国际的股票收益权。</p>
-<p>在中芯国际上市一年之后，委托人要求卖出股票并兑付收益。股票全部卖出后，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%89%E5%A4%A7%E4%BF%A1%E6%89%98.md#1">光大信托</a>以国有资产流失为由，认定当初的股权转让合同无效，表示只能把本金还给投资人。</p>
-<p>兰州法院近日一审判决信托合同有效，光大信托<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md#1">违约</a>，应当偿还投资者信托利益9962万元并支付相应利息。</p>
+	<p>【大纪元2023年10月04日讯】（大纪元记者李冰综合报导）继中融信托旗下产品接连“爆雷”后，又一央级信托公司出现违约。</p>
+<p>近日，兰州法院披露了一则案例：一名上市公司扬电科技实控人的委托人，在2020年购买了光大信托一款家族信托产品，本金7900万元，其中一部分资金用于受让光大信托战略配售中芯国际的股票收益权。</p>
+<p>在中芯国际上市一年之后，委托人要求卖出股票并兑付收益。股票全部卖出后，光大信托以国有资产流失为由，认定当初的股权转让合同无效，表示只能把本金还给投资人。</p>
+<p>兰州法院近日一审判决信托合同有效，光大信托违约，应当偿还投资者信托利益9962万元并支付相应利息。</p>
 <p>据官网显示，光大信托（光大兴陇信托）的控股股东为中共央企光大集团。</p>
-<p>中国信托领域违约事件不断出现。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E8%9E%8D%E4%BF%A1%E6%89%98.md#1">中融信托</a>旗下多个信托产品近期接连“爆雷”，据报涉及至少3,500亿元产品规模逾期兑付。之后，有关“中融信托产品暂停兑付”的消息持续发酵，被曝波及多家信托公司，引发市场对中国信托行业的担忧。8月11日，光大信托、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%94%E7%9F%BF%E4%BF%A1%E6%89%98.md#1">五矿信托</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E8%88%AA%E4%BF%A1%E6%89%98.md#1">中航信托</a>等多家央级信托公司紧急回应并辟谣。</p>
+<p>中国信托领域违约事件不断出现。中融信托旗下多个信托产品近期接连“爆雷”，据报涉及至少3,500亿元产品规模逾期兑付。之后，有关“中融信托产品暂停兑付”的消息持续发酵，被曝波及多家信托公司，引发市场对中国信托行业的担忧。8月11日，光大信托、五矿信托、中航信托等多家央级信托公司紧急回应并辟谣。</p>
 <p>责任编辑：胡宇龙</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057259.md#1">中融信托爆雷牵连数十家公司 金房能源“踩雷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058455.md#1">中融信托逾期兑付 又一家中国上市公司踩雷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069055.md#1">中国金融危机新信号：271家银行机构违约</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075236.md#1">中融信托爆雷后首次回应 公司被中共央企托管</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079824.md#1">中秋节：最接近仙界时空的节日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081525.md#1">给汉武帝送了两任皇后、两位大将军！真实的平阳公主让你意想不到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064455.md#1">【古道人生】十几岁镖师女押运数十万银到四川</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083923.md#1">【未解之谜】墨西哥外星人事件大揭秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085717.md#1">斯里兰卡男制香师转生为女孩 找到前世家人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086527.md#1">【环球直击】川普爱荷华州集会演说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085588.md#1">【百年真相】他们悲壮抗争 终结“上山下乡”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086939.md#1">【热点互动】许家印成替罪羊 房贷族答应吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086025.md#1">许家印转移巨款路径曝光 美破产保护流产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085782.md#1">全红婵夺冠后贴着墙壁走路 躲避采访</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085331.md#1">为何不要在社交媒体上分享登机牌照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086100.md#1">爱国片不灵了？陈凯歌《志愿军》票房惨淡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085684.md#1">睽违9年开唱 林俊逸献唱经典向费玉清李玟致敬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086077.md#1">曾饰演《封神榜》纣王一角 达奇在澳洲病逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14086050.md#1">黄绮珊中秋晚会唱歌跑调 微博开直播流泪道歉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086919.md#1">范冰冰亮相西班牙影展闭幕式 造型引两极反应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080936.md#1">老了一定就手抖？小心2化学物害你得帕金森症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078128.md#1">养好肠道菌防百病！益生菌专家教你1招补好菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/28/n14083421.md#1">微塑料已进入心脏 小心5大健康危害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079990.md#1">医师荐4茶饮 消脂减赘肉 4种体型这样瘦！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063013.md#1">把脉能看病？水煎药比较好？ 揭开中医不能说的秘密！</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/4/n14087612.htm">光大信托违约 以国资流失为由拒付信托收益</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/4/n14087612.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/4/n14087612.htm">光大信托违约 以国资流失为由拒付信托收益</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/4/n14087612.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
